(lang dune 3.6)

(name CAMLNES)

(generate_opam_files true)

;(source
; (github username/reponame))

;(authors "Author Name")

(maintainers "Maintainer Name")

;(license LICENSE)

;(documentation https://url/to/documentation)

(package
 (name CAMLNES)
 (synopsis "An NES emulator")
 ;(description "A longer description")
 (depends ocaml dune ppx_inline_test ocamlformat odoc tsdl)
 ;(tags
  ;(topics "to describe" your project))
)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
